--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-
+PORT=8000 
+ACCESS_TOKEN_SECRET=Amir123MysecretKey
+SENDER_EMAIL_ADDRESS=nanivajja45@gmail.com
+EMAIL_PASSWORD= kprb bhuj sggr ggop
+cronBalanceTimings=30 19 * * *
+DATABASE= mongodb+srv://yaswanthvajja93:ZMYqAk5PUY812l1Z@cluster0.znh8r.mongodb.net/
